<resources>
    <string name="app_name">RainyMessanger</string>
    <string name="welcome">welcome to rainy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email :</string>
    <string name="password">password :</string>
    <string name="create_account">Create new account</string>
    <string name="name">name :</string>
    <string name="create">Create account</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="status">Status</string>
    <string name="setting_name">Name</string>
    <string name="enter_your_status">Enter your status</string>
    <string name="save_your_status">Save Your Status</string>
    <string name="send_message">Send Message</string>
    <string name="privacy">Say Hello To Privacy</string>
</resources>