<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200"
    tools:context=".fragments.CreateAccountFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="30dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/chat_icon"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_account"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <EditText
                    android:id="@+id/account_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"/>

                <EditText
                    android:id="@+id/account_display_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"/>

                <EditText
                    android:id="@+id/account_display_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingBottom="10dp"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"/>

                <Button
                    android:id="@+id/create_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:stateListAnimator="@drawable/state_list_animator_z"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>