<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.StatusDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_status"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <EditText
                android:id="@+id/dialog_edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/status"
                android:textSize="14sp"
                android:textCursorDrawable="@drawable/bg_input_cursor_2"
                android:inputType="textEmailAddress"
                android:background="@drawable/selector_bg_edit_2"/>

            <Button
                android:id="@+id/dialog_save_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_your_status"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>